# kaizen

./: CMakeLists.txt  LICENSE  README  README.md  alexnet_test.sh  build.sh  lenet_test.sh  vgg.sh
src/: CMakeLists.txt  CNN.cpp  CNN.h  GKR.cpp  GKR.h  GKRProof.hpp  MLP  MLP.cpp  MLP.h  circuit.cpp  config_pc.hpp  elliptic_curves.cpp  elliptic_curves.h  expander.cpp  expanders.h  inputCircuit.hpp  linear_code_encode.cpp  linear_code_encode.h  lookups.cpp  lookups.h  main.cpp  merkle_tree.cpp  merkle_tree.h  mimc.cpp  mimc.h  my_hhash.h  pol_verifier.cpp  pol_verifier.h  poly_commit.cpp  poly_commit.h  polynomial.cpp  polynomial.h  prover.cpp  prover.h  quantization.cpp  quantization.h  utils.cpp  utils.hpp  verifier.cpp  verifier.h
src/old_GKR/: CNN.cpp  GKR.cpp  MLP_prover.cpp  circuit.h  prover.cpp
